<resources>
    <string name="app_name">ResidueixAppMobil</string>
    <string name="boto_registres">Registra\'t</string>
    <string name="imatge_fons">Imatge_backgrounds</string>
    <string name="qui_som_button">Qui som</string>
    <string name="login_button">Login</string>
    <string name="logo_pantalla_login">logo_login</string>
    <string name="correu_usuari">Correu</string>
    <string name="contrasenya_usuari">Contrasenya</string>
    <string name="boto_enrere">Enrere</string>
    <string name="boto_entrar">Entrar</string>
    <string name="frase_contrasenya_perduda">Ha ovlidat la seva contrasenya?</string>
    <string name="boto_Filosofia">Coneix la nostra filosofia</string>
    <string name="boto_Sobre_Nosaltres">Sobre Nosaltres</string>
    <string name="boto_Punts_Recollida">Punts de recollida</string>
    <string name="boto_Residus">Residus</string>
    <string name="text_aboutUs">Ut placerat elit at viverra fermentum. In nec purus a est pellentesque gravida vel non nisl. Aliquam imperdiet odio nec sem iaculis, sed cursus orci ultricies. Maecenas vehicula hendrerit porta. Curabitur vestibulum vulputate sapien, eget iaculis ligula auctor a. Mauris tempus eros eu lectus lacinia hendrerit. Integer vitae magna tincidunt, rutrum neque a, fringilla eros. Duis sodales ut nunc sit amet malesuada. Donec volutpat, felis eget blandit faucibus, orci ante rutrum lorem, eget venenatis sapien nisi id arcu. Sed fringilla ex id elit ornare imperdiet. Cras gravida, nisi malesuada cursus auctor, tellus sem scelerisque odio, et commodo mauris nulla quis metus. Donec hendrerit porttitor risus feugiat tempus.Curabitur suscipit pellentesque erat, nec facilisis nisl tristique eu. Nulla augue tortor, auctor non metus at, semper scelerisque neque. Proin magna tortor, molestie eget ante sit amet, pellentesque luctus magna. Sed nulla tortor, tempus ut turpis ut, scelerisque euismod velit. Donec metus augue, sodales sit amet eleifend vel, dapibus quis justo. Maecenas vel tortor nisi. Mauris velit ante, tristique in odio fermentum, semper dignissim massa.Donec viverra scelerisque quam, ac bibendum eros ornare ac. Nulla massa augue, viverra sit amet tortor eget, semper euismod massa. Nam dolor nulla, imperdiet eu pretium eget, accumsan iaculis lacus. Vivamus eros eros, feugiat ut porttitor vitae, laoreet et lectus. Aliquam ut ex tellus. Donec varius consectetur sagittis. Morbi eu rutrum risus, et suscipit libero. Aenean eget turpis laoreet, lobortis ipsum quis, consectetur neque. Nunc viverra faucibus ipsum ut pretium. Nunc id tortor leo.Integer lacus risus, elementum sit amet consequat eget, sagittis sit amet nunc. Aenean vestibulum turpis quis mauris viverra mattis. Aliquam consectetur erat velit, eu sagittis elit viverra posuere. Nunc eget lacus tempus, dapibus felis sed, euismod nisl. Ut volutpat velit et ornare rhoncus. Cras pellentesque ante eros, in efficitur purus interdum id. Nulla diam orci, euismod ut magna vitae, fringilla pretium dolor. Nunc pellentesque sem lacus, ornare porttitor elit faucibus quis. Integer ultricies nulla venenatis dui pellentesque dignissim. Nam rutrum dictum nulla at gravida. Etiam eu sem leo. Nam enim augue, ultricies eget ante sed, sodales malesuada libero. Quisque et malesuada nisi. Phasellus condimentum vel odio ut blandit. Phasellus varius urna erat, ut porttitor ante lobortis quis. Proin pulvinar aliquam tincidunt.</string>
    <string name="sobre_nosaltres">Sobre nosaltres</string>
    <string name="cognom_1">Cognom 1</string>
    <string name="nom">Nom</string>
    <string name="cognom_2">Cognom 2</string>
    <string name="mòbil">Mòbil</string>
    <string name="repetiu_contrasenya">Repetiu la contrasenya</string>
    <string name="Acceptar">Acceptar</string>
    <string name="residus">Residus</string>
    <string name="organic">Orgànic</string>
    <string name="inorgànic">Inorgànic</string>
    <string name="Carrer">Carrer</string>
    <string name="Codi_Postal">Codi Postal</string>
    <string name="Poblacio">Població</string>
    <string name="Nom_Adherit">Nom Adherit</string>
    <string name="Horari">Horari</string>
    <string name="EstablimentsAdherits">Establiments Adherits</string>
</resources>