<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistreActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraitPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imatge_fons_pprincipal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.10"
            android:background="#FFFFFF"
            android:contentDescription="@string/imatge_fons"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo_fons" />

        <TextView
            android:id="@+id/tVResidus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Fes-te Residuent!"
            android:textAlignment="center"
            android:textColor="#B33366FF"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imatge_fons_pprincipal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLFormulariEngloba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9AFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cLFormulari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#9AFFFFFF"
                android:clipToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@id/cLCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/eTNom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        android:id="@+id/cBUsuari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="12dp"
                        android:checked="true"
                        android:text="Usuari"
                        android:textColor="#B33366FF"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/cBAdherit"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/cBAdherit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="4dp"
                        android:text="Adherit"
                        android:textColor="#B33366FF"
                        android:textSize="18sp"
                        android:checked="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/cBUsuari"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/eTNom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/nom"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cLCheckbox" />

                <EditText
                    android:id="@+id/eTCognom1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/cognom_1"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eTNom" />

                <EditText
                    android:id="@+id/eTCognom2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/cognom_2"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eTCognom1" />

                <EditText
                    android:id="@+id/eTCorreu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/correu_usuari"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eTCognom2" />

                <EditText
                    android:id="@+id/eTMobil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/mòbil"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eTCorreu" />

                <EditText
                    android:id="@+id/eTContrasenya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/contrasenya_usuari"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eTMobil" />

                <EditText
                    android:id="@+id/eTRepetirContrasenya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/repetiu_contrasenya"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eTContrasenya" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cLFormulariAdicional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cLFormulari"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="gone">

                <EditText
                    android:id="@+id/adicional1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/nom"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/adicional2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="15"
                    android:hint="@string/cognom_1"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#B33366FF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/adicional1" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutBotonsCredencials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:alpha="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cLFormulariEngloba"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/boto_acceptar_login"
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/boto_acceptar"
                android:text="@string/Acceptar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.074"
                app:layout_constraintStart_toEndOf="@+id/boto_enrere"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/boto_enrere"
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/boto_denegar"
                android:onClick="tornarEnrera"
                android:text="@string/boto_enrere"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/boto_acceptar_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>